--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Welcome to the homepage of our company!!!</a></div>
+				<div class="logo"><a href="#">Welcome to GitHub Pages!!!</a></div>
 			</header>
 
 		<!-- Main -->
